Terraform-AWS/01-create_vpc/variable-way/infra-module/vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "${var.env}-main"
  }
}
